# AkuSupervisorConformance

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: architecture.md  conformance-contract.md  validation-status.md
fixtures/go-application-owned/: fixture.json  go.mod
fixtures/go-application-owned/cmd/server/: main.go
fixtures/go-application-owned/internal/application/: application.go  application_test.go
fixtures/node-application-owned/: fixture.json  package.json
fixtures/node-application-owned/src/: application.mjs  server.mjs
fixtures/node-application-owned/test/: application.test.mjs
fixtures/rust-application-owned/: Cargo.toml  fixture.json
fixtures/rust-application-owned/src/: lib.rs  main.rs
schemas/: conformance-report.schema.json  fixture-manifest.schema.json
scripts/: conformance.ps1
src/: main.rs  manifest.rs  native_path.rs  runner.rs
src/runtime/: go.rs  mod.rs  node.rs  rust.rs
