[package]
name = "aku-supervisor-conformance"
version = "0.2.0"
edition = "2024"
rust-version = "1.97"
description = "Optional runtime conformance laboratory for AkuSupervisor"
license = "UNLICENSED"
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = "warn"
pedantic = "warn"
